# pybasin

./: .gitignore  LICENSE  README.md  ROADMAP.md  execution_time.txt  mkdocs.yml  pyproject.toml
.github/prompts/: pybasin_docs_writer.prompt.md
.github/skills/clean-code/: SKILL.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  benchmark_sklearn_solver.py  utils.py
benchmarks/end_to_end/: benchmark_basin_stability_estimator.py  compare_all.py
benchmarks/end_to_end/results/: python_basin_stability_estimator_scaling.json
benchmarks/feature_extraction/: benchmark_jax_vs_tsfresh_features_timing.py  benchmark_torch_features_timing.py
benchmarks/profiling/: profiling_pendulum_case1_with_defaults.py
benchmarks/solver_comparison/: benchmark_scipy_standalone.py  benchmark_solver_comparison.py  compare_all.py
benchmarks/solver_comparison/results/: python_benchmark_results.json  python_scipy_benchmark_results.json  solver_comparison.csv
case_studies/: run_case_studies_dynamical_clusterer.py  run_case_studies_with_defaults.py
case_studies/duffing_oscillator/: duffing_jax_ode.py  duffing_ode.py  main_duffing_dynamical_clusterer.py  main_duffing_oscillator_supervised.py  main_duffing_oscillator_unsupervised.py  main_duffing_oscillator_with_defaults.py  setup_duffing_oscillator_system.py
case_studies/friction/: friction_jax_ode.py  friction_ode.py  main_friction.py  main_friction_dynamical_clusterer.py  main_friction_v_study.py  main_friction_with_defaults.py  setup_friction_system.py
case_studies/lorenz/: lorenz_jax_ode.py  lorenz_ode.py  main_lorenz.py  main_lorenz_dynamical_clusterer.py  main_lorenz_hyperpN.py  main_lorenz_hyperpTol.py  main_lorenz_sigma.py  main_lorenz_torchdiffeq.py  main_lorenz_with_defaults.py  setup_lorenz_system.py
case_studies/pendulum/: main_pendulum_case1.py  main_pendulum_case1_jax_solver_args.py  main_pendulum_case1_sklearn.py  main_pendulum_case1_torchode.py  main_pendulum_case1_with_defaults.py  main_pendulum_case2.py  main_pendulum_dynamical_clusterer.py  main_pendulum_hyperparameters.py  pendulum_jax_ode.py  pendulum_ode.py  setup_pendulum_system.py  setup_pendulum_system_sklearn.py  setup_pendulum_system_torchode.py
case_studies/rossler_network/: main_rossler_network.py  main_rossler_network_2_dimensional.py  main_rossler_network_k_study.py  rossler_network_jax_ode.py  setup_rossler_network_system.py
development/releasing/: index.html
docs/: hooks.py  index.md  macros.py
docs/api/: basin-stability-study.md  solvers.md
docs/benchmarks/: basin-stability-estimator.md  end-to-end.md  overview.md  solvers.md
docs/case-studies/: overview.md
docs/development/: contributing.md  releasing.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: dynamics-based-clustering.md  type-safety-generics.md  unbounded-trajectories.md
docs/user-guide/: basin-stability-estimator.md  basin-stability-study.md  feature-extractors.md  predictors.md  samplers.md  solution.md  solvers.md
experiments/: experiment_param_keys_helper.py
experiments/feature_extraction/: experiment_periodic_features.py
experiments/solver/: experiment_jax_jit.py  experiment_parameter_batching.py  experiment_torch_solvers_pendulum.py
experiments/solvers/: solver_save_at.py
hooks/: index.html
macros/: index.html
planning/: LOGGING_SIMPLIFICATION.md  PARAMETER_BATCHING.md  REFINED_PARAMETER_BATCHING.md
scripts/: ci.sh  generate_benchmark_plots.sh  generate_ground_truths.py  publish.sh  sync.sh
search/: search_index.json
src/pybasin/: __init__.py  basin_stability_estimator.py  basin_stability_study.py  cache_manager.py  ode_system.py  protocols.py  sampler.py  step_timer.py  study_params.py  types.py  utils.py
src/pybasin/feature_extractors/: nolds_feature_extractor.py  tsfresh_feature_extractor.py
src/pybasin/plotters/: colors.py  matplotlib_plotter.py
src/pybasin/plotters/interactive_plotter/: __init__.py  basin_stability_aio.py  param_orbit_diagram_aio.py  plotter.py  study_parameter_manager_aio.py  utils.py
src/pybasin/solvers/: __init__.py  base.py  jax_ode_system.py  jax_solver.py  numpy_ode_system.py  scipy_solver.py  torch_ode_system.py  torchdiffeq_solver.py  torchode_solver.py
src/pybasin/ts_torch/: torch_feature_extractor.py
src/zigode/: pyproject.toml  test_zig_solver.py
tests/integration/: artifact_generator.py  test_helpers.py
tests/integration/duffing/: main_duffing_supervised.json  test_duffing.py
tests/integration/duffing/ground_truths/main/: main_duffing.csv
tests/integration/friction/: main_friction_case1.json  main_friction_v_study.json  test_friction.py
tests/integration/friction/ground_truths/main/: main_friction.csv
tests/integration/friction/ground_truths/vStudy/: param_003.csv  param_006.csv  param_007.csv  (+9 more)
tests/integration/lorenz/: main_lorenz.json  main_lorenz_hyperpTol.json  main_lorenz_hyperparameters.json  main_lorenz_sigma_study.json  test_lorenz.py
tests/integration/pendulum/: main_pendulum_case1.json  main_pendulum_case2.json  main_pendulum_hyperparameters.json  test_pendulum.py
tests/integration/rossler_network/: test_rossler_network.py
tests/unit/: test_basin_stability_estimator.py  test_basin_stability_study.py  test_cache_manager.py  test_jax_solver.py  test_jax_utils.py  test_ode_system.py  test_sampler.py  test_solver.py  test_study_params.py
tests/unit/solvers/: test_jax_solver.py  test_solver.py  test_solver_cache.py
thesis_utils/: docs_plots_utils.py  thesis_matplotlib_plotter.py  thesis_matplotlib_study_plotter.py  thesis_plots_utils.py
(+126 files in other folders)
