[project]
name = "pybasin"
version = "0.2.0"
description = "Basin stability estimation for dynamical systems"
authors = [{ name = "Adrian Wix", email = "adrianwix18@gmail.com" }]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12,<3.14"
keywords = [
    "dynamical systems",
    "basin stability",
    "nonlinear dynamics",
    "attractors",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.0.0",
    "torchdiffeq>=0.2.0",
    "pandas>=2.0.0",
    "packaging>=23.0",
    "safetensors>=0.7.0",
]

[project.urls]
Documentation = "https://adrianwix.github.io/pybasin/"
Repository = "https://github.com/adrianwix/pybasin"

[project.optional-dependencies]
jax = ["jax>=0.8.0", "diffrax>=0.7.0"]
interactive = ["plotly>=5.18.0", "dash>=2.14.0", "dash-mantine-components>=0.14.0"]
tsfresh = ["tsfresh>=0.21.1"]
nolds = ["nolds>=0.6.3"]
torchode = ["torchode>=1.0.0"]
all = [
    "pybasin[jax]",
    "pybasin[interactive]",
    "pybasin[tsfresh]",
    "pybasin[nolds]",
    "pybasin[torchode]",
]

[build-system]
requires = ["uv_build>=0.6.6,<0.7"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config", "-ra", "-q", "--no-header", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Enable linting rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PLC0415", # import-outside-toplevel (from Pylint via Ruff)
]
ignore = ["E501", "N803", "N806"] # Line length handled by formatter, allow lowercase in variable names, allow non-lowercase variables in functions

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py
"benchmarks/*.py" = [
    "E402",
] # Allow module level imports after code for environment setup
"experiments/**/*.py" = [
    "F722",
    "PLC0415",
    "N813",
] # Ruff doesn't support JaxTyping annotations; diffeqpy needs runtime imports
"experiments/diffrax/*.py" = [
    "F722",
    "F821",
] # Ruff doesn't support JaxTyping annotations (F821 for dimension names like 'batch')
"src/pybasin/feature_extractors/correlation_selector.py" = [
    "N803",
] # X is standard for sklearn-compatible transformers
"src/pybasin/ts_torch/torch_batched_calculators.py" = [
    "N806",
] # V, VtV, Vtv are standard mathematical notation
"src/pybasin/ts_torch/calculators/*.py" = [
    "N806",
] # V, VtV, Vtv are standard mathematical notation
"src/pybasin/predictors/*.py" = [
    "N803",
    "N806",
] # X is standard for sklearn-compatible estimators
"tests/**/*.py" = [
    "N803",
    "N806",
] # X, y, X_train, X_test are standard ML conventions

[tool.ruff.format]
# Use Ruff's formatter (similar to Black)
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.uv]
default-groups = ["dev", "docs", "case-studies", "experiments", "gpu"]

[tool.uv.workspace]
members = ["src/zigode"]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

[tool.vulture]
ignore_decorators = ["@callback", "@app.callback", "@self.app.callback"]
ignore_names = ["render", "layout"]

[dependency-groups]
dev = [
    "austin-dist>=4.0.0",
    "austin-python>=2.1.2",
    "cpsmehelper>=1.0.1",
    "jaxtyping>=0.3.3",
    "microsoft-python-type-stubs",
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pytest>=7.4.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "scalene>=2.1.0",
    "scipy-stubs>=1.17.0.2",
    "sympy>=1.14.0",
    "vulture>=2.14",
]
docs = [
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-macros-plugin>=1.0.0",
]
case-studies = [
    "jupyter>=1.0.0",
    "openpyxl>=3.1.0",
    "notebook>=7.0.0",
    "networkx>=3.6.1",
]
experiments = [
    "cython>=3.2.4",
    "diffeqpy>=2.5.5",
    "heyoka>=7.9.2",
    "pynamicalsys>=1.5.0",
]
gpu = [
    "jax[cuda12]>=0.8.0",
]
